kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cityfix
  labels:
    name: cityfix
    environment: production
